--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Prince
+  description: This role will let you to install apache2 on manage nodes 
+  company: self for test purpose 
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
