--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: Prince
+  author: Prince Kapoor
   description: This role will let you to install apache2 on manage nodes 
   company: self for test purpose 
 
